# auxlry

./: .gitignore  Cargo.toml  README.md  build.rs
dashboard/: index.html  package.json  vite.config.ts
dashboard/src/: index.css  main.tsx  routeTree.gen.ts
dashboard/src/components/charts/: AgentActivityChart.tsx  EventFeed.tsx  MemoryGrowthChart.tsx  MemoryTypesRadar.tsx  MessageHeatmap.tsx
dashboard/src/components/memory/: graph-legend.tsx  knowledge-graph.tsx  node-detail.tsx  types.ts
dashboard/src/lib/: api.ts  queries.ts
dashboard/src/routes/: __root.tsx  config.tsx  index.tsx  memory.tsx
docs/: CONFIG.md  DASHBOARD.md  PLAN.md
migrations/: 001_initial.sql  002_memory_graph.sql  003_pending_links.sql
prompts/en/adapters/: discord.md.j2  telegram.md.j2  webhook.md.j2
prompts/en/interface/: default.md.j2
prompts/en/operator/: default.md.j2
prompts/en/synapse/: default.md.j2
src/: lib.rs  main.rs
src/adapters/: discord.rs  mod.rs
src/api/: routes.rs
src/cli/: core_cmd.rs  mod.rs  node_cmd.rs
src/config/: loader.rs  types.rs
src/core/: daemon.rs  mod.rs  signal.rs  state.rs
src/events/: bus.rs  mod.rs  persist.rs  types.rs
src/interface/: agent.rs  mod.rs  router.rs  session.rs  tools.rs  typing.rs
src/memory/: graph.rs  importance.rs  mod.rs  search.rs  store.rs  tools.rs  types.rs
src/network/: hole_punch.rs  mod.rs  nat.rs  quic.rs  transport.rs  traversal.rs  turn.rs
src/node/: executor.rs  handler.rs  linking.rs  local.rs  mod.rs  protocol.rs  registry.rs  remote.rs
src/operator/: agent.rs  mod.rs  planner.rs  task.rs  tools.rs
src/storage/: database.rs  mod.rs  paths.rs
src/synapse/: agent.rs  mod.rs  task.rs  tools.rs
